develop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-app
  namespace: backend
spec:
  selector:
    app: backend-app
  ports:
    - port: 80
      targetPort: 8080
  type: NodePort
